--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,10 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.8.9'
 	// spring-boot-starter-oauth2-client
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:2.5.4'
+	// spring-boot-starter-aop
+	implementation 'org.springframework.boot:spring-boot-starter-aop:2.7.5'
+
+
 
 
 	compileOnly 'org.projectlombok:lombok'
